# python-maze-solver

./: flake.nix  pyproject.toml
maze_solver/: __init__.py  __main__.py  geometry.py  maze.py  window.py
