[tool.poetry]
name = "maze-solver"
version = "0.1.1"
description = ""
authors = ["Hiten Tandon <tandonhiten@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tk = "^0.1.0"
rand = "^0.3.0"
ttkbootstrap = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
